--- a/app/assets/stylesheets/common_misc.css.scss
+++ b/app/assets/stylesheets/common_misc.css.scss
@@ -12,6 +12,12 @@
   border-top: 1px solid #898989;
 }
 
+@mixin white-box {
+  background-color: white;
+  border: 1px solid rgb(228, 224, 222);
+  padding: 10px;
+}
+
 .bar-top {
   @include bar-top;
 }
