--- a/app/views/layouts/application_home_page.html.erb
+++ b/app/views/layouts/application_home_page.html.erb
@@ -14,6 +14,35 @@
     <%= render  partial: "shared/local_alerts" %>
   </div>
 
+  <div style="clear:both; margin-top: 12px"></div>
+
+  <div id="application-home-page-create">
+    <h3>Create</h3>
+    <p>Contribute free-form, multiple choice, matching,<br/>and multi-step questions in any subject area!</p>
+    <%= link_to "Write a question >", nil %>    
+  </div>
+  
+  <div id="application-home-page-use" class='application-home-page-right-box'>
+    <h3>Use</h3>
+    <p>Easily use questions in tests and homeworks, or embed in your online learning platform.</p>
+    <%= link_to "See examples >", nil %>
+  </div>
+
+  <div id="application-home-page-find" class='application-home-page-right-box'>
+    <h3>Find</h3>
+    <p>Search for questions related to e-texts, concepts, interactive simulations, or other questions.</p>
+    <%= link_to "Search for questions >", nil %>
+  </div>
+
+  <div id="application-home-page-share" class='application-home-page-right-box last'>
+    <h3>Share</h3>
+    <p>Open licenses recognize authors and make our questions free for others to use and re-use.</p>
+    <%= link_to "Learn more >", nil %>
+  </div>
+
+
+  <div style="clear:both; margin-bottom: 12px"></div>
+
 <% end %>
 
 <%= render :template => "layouts/application" %>
