updated normal content page and home page

--- a/app/assets/stylesheets/common_colors.css.scss
+++ b/app/assets/stylesheets/common_colors.css.scss
@@ -11,7 +11,7 @@ $os_dark_orange:  darken($os_orange,10%);
 $os_dark_gray:    darken($os_gray,20%);
 
 $ost_light_beige:   #f7f3f1;
-$ost_hot_blue:      #43bff9;
+$hot_blue:      #43bff9;
 $ost_account_gray:  #9d9d9d;
 
 $application_background_color: rgb(247,243,241);
