--- a/app/views/layouts/application_home_page.html.erb
+++ b/app/views/layouts/application_home_page.html.erb
@@ -19,25 +19,25 @@
   <div id="application-home-page-create">
     <h3>Create</h3>
     <p>Contribute free-form, multiple choice, matching,<br/>and multi-step questions in any subject area!</p>
-    <%= link_to "Write a question >", nil %>    
+    <%= link_to "Write a question >", nil, :class => 'link_button' %>    
   </div>
   
   <div id="application-home-page-use" class='application-home-page-right-box'>
     <h3>Use</h3>
     <p>Easily use questions in tests and homeworks, or embed in your online learning platform.</p>
-    <%= link_to "See examples >", nil %>
+    <%= link_to "See examples >", nil, :class => 'link_button'%>
   </div>
 
   <div id="application-home-page-find" class='application-home-page-right-box'>
     <h3>Find</h3>
     <p>Search for questions related to e-texts, concepts, interactive simulations, or other questions.</p>
-    <%= link_to "Search for questions >", nil %>
+    <%= link_to "Search for questions >", nil, :class => 'link_button' %>
   </div>
 
   <div id="application-home-page-share" class='application-home-page-right-box last'>
     <h3>Share</h3>
     <p>Open licenses recognize authors and make our questions free for others to use and re-use.</p>
-    <%= link_to "Learn more >", nil %>
+    <%= link_to "Learn more >", nil, :class => 'link_button' %>
   </div>
 
 
