--- a/app/assets/stylesheets/layouts/application_body_only.css.scss
+++ b/app/assets/stylesheets/layouts/application_body_only.css.scss
@@ -3,18 +3,13 @@
 
 @import "common";
 
-#application-body-only-frame {
+#application-body-only {
   position: relative;
-
-  $body_width:  $application_master_width - 2*$application_edge_distance;
+  margin-bottom: 15px;
+  margin-left: 12px;
+  margin-right: 12px;
 
   #application-body-only-body-content {
-    width:          $body_width;
-    padding-left:   $application_edge_distance;
-    padding-right:  $application_edge_distance;
-    padding-top:    $application_basic_spacing;
-    padding-bottom: $application_basic_spacing;
-
     #application-body-only-body {
     }
   }
