--- a/app/views/static_page/copyright.html.erb
+++ b/app/views/static_page/copyright.html.erb
@@ -1,12 +1,17 @@
 <%= page_heading "Copyright and Licensing Details" %>
+<%#= page_heading "Write a New Question" %>
 
-<p>All content on this web site is either Copyright <%= COPYRIGHT_HOLDER %> or 
-<%= COPYRIGHT_HOLDER %> has permission for use from the copyright holders.</p>
+<%= partial_width_block do %>
 
-<p>All learning record content is licensed according to the API terms of use.</p>
+  <p>All content on this web site is either Copyright <%= COPYRIGHT_HOLDER %> or 
+  <%= COPYRIGHT_HOLDER %> has permission for use from the copyright holders.</p>
 
-<p>The source code for <%= SITE_NAME %> is open source.  For copyright and licensing details, see the relevant files at <a href="http://github.com/openstax/exchange">http://github.com/openstax/exchange</a>.</p>
+  <p><%= SITE_NAME %> favors question content that is openly-licensed.  As such, many questions on <%= SITE_NAME %> are licensed using a Creative Commons Attribution license.  See specific questions for their particular copyright and licensing information.</p>
 
-<p>All other content/information/imagery on this site (including but not limited to logos, taglines, images, 
-   text copy, web site design, etc; excluding student records and content licensed
-   from other entities) is Copyright <%= COPYRIGHT_HOLDER %> All Rights Reserved.</p>
+  <p>The source code for <%= SITE_NAME %> is open source.  For copyright and licensing details, see the relevant files at <a href="http://github.com/openstax/exercises">http://github.com/openstax/exercises</a>.</p>
+
+  <p>All other content/information/imagery on this site (including but not limited to logos, taglines, images, 
+     text copy, web site design, etc; excluding student records and content licensed
+     from other entities) is Copyright <%= COPYRIGHT_HOLDER %> All Rights Reserved.</p>
+
+<% end %>
