--- a/app/views/layouts/_application_footer.html.erb
+++ b/app/views/layouts/_application_footer.html.erb
@@ -18,8 +18,7 @@
 
       Supported by
       the <%= link_to "National Science Foundation", "http://www.nsf.org" %>,
-      <%= link_to "Google", "http://www.google.org" %>,
-      <%= link_to "Duke University", "http://www.duke.edu" %>, and
+      <%= link_to "Google", "http://www.google.org" %>, and
       <%= link_to "Rice University", "http://www.rice.edu" %>
       <br/>
     </div>
