--- a/app/views/layouts/_application_footer.html.erb
+++ b/app/views/layouts/_application_footer.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div id="footer-copyright">
-      <%= copyright_text %> |
+      <%= link_to Utilities::copyright_text, copyright_path %> |
       <%= link_to "Terms of Use", "#" %> |
       <%= link_to "Contact Us",   "#" %>
       <br/>
