added initial oauth framework in, at least placeholder user and devise stuff

--- a/app/assets/stylesheets/layouts/application_body.css.scss
+++ b/app/assets/stylesheets/layouts/application_body.css.scss
@@ -13,6 +13,13 @@
   text-decoration: none;
   color: $os_green;
 
+  &.link_button {
+    color: white;
+    &:hover { 
+      color: white;
+    }
+  }
+
   &:hover {
     color: $hot_blue;
   }
