--- a/app/views/doorkeeper/applications/new.html.erb
+++ b/app/views/doorkeeper/applications/new.html.erb
@@ -1,13 +1,9 @@
-<div class="span16">
-  <header class="page-header"><h2>New application</h2></header>
-</div>
+<%= page_heading "New OAuth Application" %>
 
-<div class="span12">
+<div>
   <%= render 'form', :application => @application %>
 </div>
 
-<div class="span4">
-  <h3>Actions</h3>
+
   <p><%= link_to 'Back to application list', oauth_applications_path %></p>
-</div>
 
