--- a/app/views/doorkeeper/applications/show.html.erb
+++ b/app/views/doorkeeper/applications/show.html.erb
@@ -1,8 +1,4 @@
-<div class="span16">
-  <header class="page-header">
-    <h1>Application: <%= @application.name %></h1>
-  </header>
-</div>
+<%= page_heading "OAuth Application: #{@application.name}" %>
 
 <div class="span10">
   <h4>Callback url:</h4>
@@ -18,9 +14,8 @@
   <p><%= link_to 'Authorize', oauth_authorization_path(:client_id => @application.uid, :redirect_uri => @application.redirect_uri, :response_type => 'code' ) %></p>
 </div>
 
-<div class="span6">
-  <h3>Actions</h3>
-  <p><%= link_to 'List all', oauth_applications_path %></p>
-  <p><%= link_to 'Edit', edit_oauth_application_path(@application) %></p>
-  <p><%= link_to 'Remove', [:oauth, @application], :method => :delete, :data => { :confirm => "Are you sure?" } %></p>
+<div style="clear:both">
+  <%= link_to 'All Applications', oauth_applications_path %> | 
+  <%= link_to 'Edit', edit_oauth_application_path(@application) %> |
+  <%= link_to 'Remove', [:oauth, @application], :method => :delete, :data => { :confirm => "Are you sure?" } %>
 </div>
