--- a/app/views/layouts/_application_footer.html.erb
+++ b/app/views/layouts/_application_footer.html.erb
@@ -13,6 +13,7 @@
     <div id="footer-copyright">
       <%= link_to Utilities::copyright_text, copyright_path %> |
       <%= link_to "Terms of Use", "#" %> |
+      <%= link_to "Developers", developers_path %> |
       <%= link_to "Contact Us",   "#" %>
       <br/>
 
