--- a/app/views/layouts/application_body_api_docs.html.erb
+++ b/app/views/layouts/application_body_api_docs.html.erb
@@ -7,6 +7,8 @@
     <%= yield %>
   </div>
 
+  <div style="clear:both; margin-bottom: 12px"></div>
+
 <% end %>
 
 <%= render :template => "layouts/application" %>
