--- a/examples/oauth-client/views/layout.erb
+++ b/examples/oauth-client/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example Quadbase OAuth 2 Client</title>
+  <title>Example OpenStax Exercises OAuth 2 Client</title>
   <link type="text/css" rel="stylesheet" media="screen" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
   <link type="text/css" rel="stylesheet" media="screen" href="/application.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -10,7 +10,7 @@
   <div class="topbar" data-scrollspy="scrollspy">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="/">Example Quadbase OAuth 2 Client</a>
+        <a class="brand" href="/">Example OpenStax Exercises OAuth 2 Client</a>
         <div class="nav-collapse collapse navbar-responsive-collapse">
                   
                   
