Hopefully finished the schema

--- a/app/views/exercise_derivations/_form.html.erb
+++ b/app/views/exercise_derivations/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :derived %><br />
-    <%= f.text_field :derived %>
+    <%= f.label :derived_exercise_id %><br />
+    <%= f.number_field :derived_exercise_id %>
   </div>
   <div class="field">
     <%= f.label :source_exercise_id %><br />
