--- a/app/views/exercise_derivations/show.html.erb
+++ b/app/views/exercise_derivations/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Derived:</b>
-  <%= @exercise_derivation.derived %>
+  <b>Derived exercise:</b>
+  <%= @exercise_derivation.derived_exercise_id %>
 </p>
 
 <p>
