--- a/app/views/solutions/show.html.erb
+++ b/app/views/solutions/show.html.erb
@@ -1,6 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Number:</b>
+  <%= @solution.number %>
+</p>
+
+<p>
+  <b>Version:</b>
+  <%= @solution.version %>
+</p>
+
+<p>
   <b>Content:</b>
   <%= @solution.content %>
 </p>
@@ -18,6 +28,11 @@
 <p>
   <b>Question:</b>
   <%= @solution.question_id %>
+</p>
+
+<p>
+  <b>Creator:</b>
+  <%= @solution.creator_id %>
 </p>
 
 
