--- a/app/views/solutions/_form.html.erb
+++ b/app/views/solutions/_form.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :number %><br />
+    <%= f.number_field :number %>
+  </div>
+  <div class="field">
+    <%= f.label :version %><br />
+    <%= f.number_field :version %>
+  </div>
+  <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
   </div>
@@ -26,6 +34,10 @@
   <div class="field">
     <%= f.label :question_id %><br />
     <%= f.number_field :question_id %>
+  </div>
+  <div class="field">
+    <%= f.label :creator_id %><br />
+    <%= f.number_field :creator_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
