--- a/app/views/user_group_users/_form.html.erb
+++ b/app/views/user_group_users/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@user_group_member) do |f| %>
-  <% if @user_group_member.errors.any? %>
+<%= form_for(@user_group_user) do |f| %>
+  <% if @user_group_user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user_group_member.errors.count, "error") %> prohibited this user_group_member from being saved:</h2>
+      <h2><%= pluralize(@user_group_user.errors.count, "error") %> prohibited this user_group_user from being saved:</h2>
 
       <ul>
-      <% @user_group_member.errors.full_messages.each do |msg| %>
+      <% @user_group_user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -20,8 +20,8 @@
     <%= f.number_field :user_id %>
   </div>
   <div class="field">
-    <%= f.label :is_group_manager %><br />
-    <%= f.check_box :is_group_manager %>
+    <%= f.label :is_manager %><br />
+    <%= f.check_box :is_manager %>
   </div>
   <div class="actions">
     <%= f.submit %>
