--- a/app/views/user_group_users/new.html.erb
+++ b/app/views/user_group_users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add user</h1>
 
-<%= render 'form' %>
+TODO: search
 
-<%= link_to 'Back', user_group_users_path %>
+<%= link_to 'Back', user_group_path(@user_group) %>
