--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,12 +1,8 @@
-<h1>Listing lists</h1>
+<h1>Lists</h1>
 
 <table>
   <tr>
     <th>Name</th>
-    <th>Reader user group</th>
-    <th>Editor user group</th>
-    <th>Publisher user group</th>
-    <th>Manager user group</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,10 +11,6 @@
 <% @lists.each do |list| %>
   <tr>
     <td><%= list.name %></td>
-    <td><%= list.reader_user_group_id %></td>
-    <td><%= list.editor_user_group_id %></td>
-    <td><%= list.publisher_user_group_id %></td>
-    <td><%= list.manager_user_group_id %></td>
     <td><%= link_to 'Show', list %></td>
     <td><%= link_to 'Edit', edit_list_path(list) %></td>
     <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
