--- a/app/views/user_group_users/_show.html.erb
+++ b/app/views/user_group_users/_show.html.erb
@@ -1,5 +1,5 @@
 <tr>
   <td><%= user_group_user.user.name %></td>
-  <td><%= user_group_user.is_manager ? 'Manager' : 'user' %> (<%= link_to 'Toggle', user_group_user, method: :put, data: { confirm: 'Are you sure?' } %>)</td>
+  <td><%= user_group_user.is_manager ? 'Manager' : 'user' %> (<%= link_to 'Toggle', toggle_user_group_user_path(user_group_user), method: :put, data: { confirm: 'Are you sure?' } %>)</td>
   <td><%= link_to 'Remove', user_group_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
