--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -9,6 +9,6 @@
 
 <br />
 
-<%= link_to 'Add member', new_user_group_user_path(@user_group) %> |
+<%= link_to 'Add user', new_user_group_user_group_user_path(@user_group) %> |
 <%= link_to 'Edit group', edit_user_group_path(@user_group) %> |
 <%= link_to 'Back', user_groups_path %>
