--- a/app/views/user_group_users/new.html.erb
+++ b/app/views/user_group_users/new.html.erb
@@ -1,5 +1,27 @@
 <h1>Add user</h1>
 
-TODO: search
+<%= form_tag(new_user_group_user_group_user_path(@user_group)) do %>
+  <table width="550px" align="center">
+    <tr>
+      <td><%= label_tag 'Search For:' %>&nbsp;</td>
+      <td><%= text_field_tag 'text_query', @text_query %>&nbsp;</td>
+      <td><%= label_tag 'in:' %>&nbsp;</td>
+      <td><%= select_tag 'selected_type', 
+              options_for_select(['Name', 'Username', 'Email'], @selected_type) %>
+        &nbsp;
+      </td>
+      <td>
+        <%= submit_tag 'Search' %>
+      </td>
+    </tr>
+  </table>
+<% end %>
+
+<div id="users_list">
+  <%= render :partial => 'user_search',
+             :locals => {:user_group_user => @user_group_user,
+                         :user_group => @user_group,
+                         :users => @users} %>
+</div>
 
 <%= link_to 'Back', user_group_path(@user_group) %>
