--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,19 +1,12 @@
 <h1>Lists</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @lists.each do |list| %>
   <tr>
-    <td><%= list.name %></td>
-    <td><%= link_to 'Show', list %></td>
-    <td><%= link_to 'Edit', edit_list_path(list) %></td>
+    <td><%= link_to list.name, list %></td>
+  <% if current_user.is_admin? %>
     <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
   </tr>
 <% end %>
 </table>
