--- a/app/views/user_group_users/_show.html.erb
+++ b/app/views/user_group_users/_show.html.erb
@@ -1,7 +1,15 @@
+<% # Clients of this partial can override the following variable:
+   hide_status ||= false
+%>
+
 <tr>
   <td><%= user_group_user.user.name %></td>
+<% unless hide_status %>
   <td><%= user_group_user.is_manager ? 'Manager' : 'Member' %> (<%= link_to 'Toggle', toggle_user_group_user_path(user_group_user), method: :put, data: {
     confirm: "Are you sure you want to #{user_group_user.is_manager ? 'demote' : 'promote'} #{user_group_user.user.name} to group #{user_group_user.is_manager ? 'member' : 'manager'}?"
   } %>)</td>
-  <td><%= link_to 'Remove', user_group_user, method: :delete, data: { confirm: "Are you sure you want to remove #{user_group_user.user.name} from the group?" } %></td>
+<% end %>
+<% if user_group_user.can_be_destroyed_by?(current_user) || current_user.is_admin? %>
+  <td><%= link_to (user_group_user.user == current_user ? 'Leave Group' : 'Remove'), user_group_user, method: :delete, data: { confirm: "Are you sure you want to remove #{user_group_user.user.name} from the group?" } %></td>
+<% end %>
 </tr>
