--- a/app/views/user_groups/edit.html.erb
+++ b/app/views/user_groups/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user_group %> |
-<%= link_to 'Back', user_groups_path %>
+<%= link_to 'Back', @user_group %>
