--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -1,12 +1,14 @@
 <p>
-  <b>Group:</b>
-  <%= @user_group.name %>
+  <%= @user_group.full_name %>
 </p>
 
-<%= render :partial => 'user_group_users/index', :locals => {:user_group_users => @user_group.user_group_users} %>
+<%= render :partial => 'user_group_users/index', :locals => {:user_group_users => @user_group.user_group_users,
+                                                             :hide_status => !@user_group.container.nil?} %>
 
 <br />
 
+<% if @user_group.can_be_updated_by?(current_user) || current_user.is_admin? %>
 <%= link_to 'Add user', new_user_group_user_group_user_path(@user_group) %> |
 <%= link_to 'Edit group', edit_user_group_path(@user_group) %> |
+<% end %>
 <%= link_to 'Back', user_groups_path %>
