--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @exercise %> |
-<%= link_to 'Back', exercises_path %>
+<%= link_to 'Back', @exercise %>
