--- a/app/views/layouts/_application_header.html.erb
+++ b/app/views/layouts/_application_header.html.erb
@@ -36,16 +36,16 @@
           </li>
           <li>
             <%= render "layouts/application_top_nav_link", 
-                       target_text:            "USER GROUPS",
+                       target_text:            "EXERCISE LISTS",
                        target_id:              "top-nav-api-link",
-                       target_path:            'user_groups',
+                       target_path:            'lists',
                        target_current_symbol:  :top_nav_api_current %>
           </li>
           <li>
             <%= render "layouts/application_top_nav_link", 
-                       target_text:            "LISTS",
+                       target_text:            "USER GROUPS",
                        target_id:              "top-nav-api-link",
-                       target_path:            'lists',
+                       target_path:            'user_groups',
                        target_current_symbol:  :top_nav_api_current %>
           </li>
           <li>
