--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
 <% @lists.each do |list| %>
   <tr>
     <td><%= link_to list.name, list %></td>
-  <% if current_user.is_admin? %>
+  <% if user_is_admin? %>
     <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   <% end %>
   </tr>
