--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -38,7 +38,7 @@
   </ul>
 </p>
 
-<% if @list.can_be_updated_by?(current_user) || current_user.is_admin? %>
+<% if @list.can_be_updated_by?(current_user) || user_is_admin? %>
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <% end %>
 <%= link_to 'Back', lists_path %>
