--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,37 +1,15 @@
-<%= form_for(@question) do |f| %>
-  <% if @question.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
+<% # Clients of this partial must supply the following variable:
+   # f %>
 
-      <ul>
-      <% @question.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= f.fields_for :questions do |q| %>
   <div class="field">
-    <%= f.label :exercise_id %><br />
-    <%= f.number_field :exercise_id %>
+    <%= q.label :content %><br />
+    <%= q.text_area :content %>
   </div>
   <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= q.label :credit %><br />
+    <%= q.text_field :credit %>
   </div>
-  <div class="field">
-    <%= f.label :content_html %><br />
-    <%= f.text_area :content_html %>
-  </div>
-  <div class="field">
-    <%= f.label :order %><br />
-    <%= f.number_field :order %>
-  </div>
-  <div class="field">
-    <%= f.label :credit %><br />
-    <%= f.text_field :credit %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= q.link_to_remove "Remove question" %>
 <% end %>
+<%= f.link_to_add "Add question", :questions %>
