--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -7,7 +7,7 @@
 
 <br />
 
-<% if @user_group.can_be_updated_by?(current_user) || current_user.is_admin? %>
+<% if @user_group.can_be_updated_by?(current_user) || user_is_admin? %>
 <%= link_to 'Add user', new_user_group_user_group_user_path(@user_group) %> |
 <%= link_to 'Edit group', edit_user_group_path(@user_group) %> |
 <% end %>
